<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddPost"
    android:background="@color/background"
    android:layoutDirection="ltr">

    <!-- back button -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <LinearLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"  >

        <!-- Author image -->
        <ImageView
            android:id="@+id/ivAuthorImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>
        <!-- Author nickname -->
        <TextView
            android:id="@+id/tvAuthorNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toplayout">

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/addPost_etContent"/>

        <ImageButton
            android:id="@+id/btnImageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/ivPic"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"/>

        <!--  publish button  -->

        <Button
            android:id="@+id/btnPublish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/addPost_btnPublish"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addPost_missingContent"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvProhibitedMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addPost_prohibitedContent"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
